update: resolving linting errors

--- a/experiments/exp2025_03_29_dia_augmentation_all_dataset/exp2025_03_29_dia_augmentation_all_dataset/dia_augmentation_check.ipynb
+++ b/experiments/exp2025_03_29_dia_augmentation_all_dataset/exp2025_03_29_dia_augmentation_all_dataset/dia_augmentation_check.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -158,9 +158,9 @@
     "        length_comparison = is_correct_length_modified(orig_dia, aug_dia)\n",
     "        roles_comparison = match_roles_modified(orig_dia, aug_dia)\n",
     "\n",
-    "        if length_comparison != True:\n",
+    "        if not length_comparison:\n",
     "            failure_instances_length.append((i, j, length_comparison))\n",
-    "        if roles_comparison != True:\n",
+    "        if not roles_comparison:\n",
     "            failure_instances_roles.append((i, j, roles_comparison))\n",
     "\n",
     "len(failure_instances_length), len(failure_instances_roles)"
