--- a/experiments/exp2025_03_29_dia_augmentation_all_dataset/exp2025_03_29_dia_augmentation_all_dataset/dia_augmentation.ipynb
+++ b/experiments/exp2025_03_29_dia_augmentation_all_dataset/exp2025_03_29_dia_augmentation_all_dataset/dia_augmentation.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -164,9 +164,9 @@
     "        length_comparison = is_correct_length_modified(orig_dia, aug_dia)\n",
     "        roles_comparison = match_roles_modified(orig_dia, aug_dia)\n",
     "\n",
-    "        if length_comparison != True:\n",
+    "        if not length_comparison:\n",
     "            failure_instances_length.append((i, j, length_comparison))\n",
-    "        if roles_comparison != True:\n",
+    "        if not roles_comparison:\n",
     "            failure_instances_roles.append((i, j, roles_comparison))\n",
     "\n",
     "failure_instances_length, failure_instances_roles"
