--- a/experiments/exp2025_03_31_reaugmentation/exp2025_03_31_reaugmentation/uttr_vars_error_analysis.ipynb
+++ b/experiments/exp2025_03_31_reaugmentation/exp2025_03_31_reaugmentation/uttr_vars_error_analysis.ipynb
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
    ],
    "source": [
     "for i, j in examples_for_reaugmentation:\n",
-    "    if (i, j) in [(k, l) for (k, l, _) in exceptions]:\n",
+    "    if (i, j) in [(k, L) for (k, L, _) in exceptions]:\n",
     "        print(i, j)"
    ]
   },
