--- a/examples/pipeline_usage/pipeline_example.ipynb
+++ b/examples/pipeline_usage/pipeline_example.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
    ],
    "source": [
     "from dialogue2graph.pipelines.model_storage import ModelStorage\n",
-    "from dialogue2graph.pipelines.d2g_llm.pipeline import Pipeline as D2GLLMPipeline"
+    "from dialogue2graph.pipelines.d2g_llm.pipeline import D2GLLMPipeline"
    ]
   },
   {
