--- a/experiments/exp2025_03_31_reaugmentation/exp2025_03_31_reaugmentation/uttr_vars_error_analysis.ipynb
+++ b/experiments/exp2025_03_31_reaugmentation/exp2025_03_31_reaugmentation/uttr_vars_error_analysis.ipynb
@@ -1604,9 +1604,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\n",
-    "    \"../data/unstable_augmentation_examples.json\", \"w\", encoding=\"utf-8\"\n",
-    ") as file:\n",
+    "with open(\"../data/unstable_augmentation_examples.json\", \"w\", encoding=\"utf-8\") as file:\n",
     "    json.dump(exceptions, file, indent=4)"
    ]
   }
