--- a/experiments/exp2025_04_03_selecting_emb_params/src/exp2025_04_03_selecting_emb_params/Finding start and end nodes.ipynb
+++ b/experiments/exp2025_04_03_selecting_emb_params/src/exp2025_04_03_selecting_emb_params/Finding start and end nodes.ipynb
@@ -36,10 +36,10 @@
    "source": [
     "first_messages = Counter()\n",
     "\n",
-    "for graph in dataset['train']:\n",
-    "    for dialog in graph['dialogues']:\n",
-    "        part, text = dialog['messages'][0]['participant'], dialog['messages'][0]['text']\n",
-    "        if part == 'assistant':\n",
+    "for graph in dataset[\"train\"]:\n",
+    "    for dialog in graph[\"dialogues\"]:\n",
+    "        part, text = dialog[\"messages\"][0][\"participant\"], dialog[\"messages\"][0][\"text\"]\n",
+    "        if part == \"assistant\":\n",
     "            first_messages[text] += 1"
    ]
   },
@@ -90,10 +90,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greeting_parts = set([mes.split('! ')[0] if '! ' in mes else mes.split(', ')[0] for mes in first_messages if '! ' in mes or ', ' in mes])\n",
+    "greeting_parts = set(\n",
+    "    [\n",
+    "        mes.split(\"! \")[0] if \"! \" in mes else mes.split(\", \")[0]\n",
+    "        for mes in first_messages\n",
+    "        if \"! \" in mes or \", \" in mes\n",
+    "    ]\n",
+    ")\n",
     "greeting_parts = sorted(list(greeting_parts))\n",
     "\n",
-    "interrogative_parts = set([mes.split('! ')[1] if '! ' in mes else mes.split(', ')[1] for mes in first_messages if '! ' in mes or ', ' in mes])\n",
+    "interrogative_parts = set(\n",
+    "    [\n",
+    "        mes.split(\"! \")[1] if \"! \" in mes else mes.split(\", \")[1]\n",
+    "        for mes in first_messages\n",
+    "        if \"! \" in mes or \", \" in mes\n",
+    "    ]\n",
+    ")\n",
     "interrogative_parts = sorted(list(interrogative_parts))"
    ]
   },
@@ -170,21 +182,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chosen_greeting_parts = [\n",
-    "    'Greetings',\n",
-    "    'Hello',\n",
-    "    'Hi',\n",
-    "    \"Welcome to our assistant service\"\n",
-    "]\n",
+    "chosen_greeting_parts = [\"Greetings\", \"Hello\", \"Hi\", \"Welcome to our assistant service\"]\n",
     "chosen_interrogative_parts = [\n",
-    "    \"How can I assist you?\", \n",
-    "    \"How can I help you?\", \n",
+    "    \"How can I assist you?\",\n",
+    "    \"How can I help you?\",\n",
     "    \"Would you like to do this?\",\n",
-    "    \"Could you tell me this?\"\n",
+    "    \"Could you tell me this?\",\n",
     "]\n",
     "\n",
-    "start_nodes = ['! '.join(pair) for pair in product(chosen_greeting_parts, chosen_interrogative_parts)]\n",
-    "with open('start_turns.json', 'w', encoding='utf-8') as file:\n",
+    "start_nodes = [\n",
+    "    \"! \".join(pair)\n",
+    "    for pair in product(chosen_greeting_parts, chosen_interrogative_parts)\n",
+    "]\n",
+    "with open(\"start_turns.json\", \"w\", encoding=\"utf-8\") as file:\n",
     "    json.dump(start_nodes, file, ensure_ascii=False, indent=4)"
    ]
   },
@@ -203,10 +213,13 @@
    "source": [
     "end_messages = Counter()\n",
     "\n",
-    "for graph in dataset['train']:\n",
-    "    for dialog in graph['dialogues']:\n",
-    "        part, text = dialog['messages'][-1]['participant'], dialog['messages'][-1]['text']\n",
-    "        if part == 'assistant':\n",
+    "for graph in dataset[\"train\"]:\n",
+    "    for dialog in graph[\"dialogues\"]:\n",
+    "        part, text = (\n",
+    "            dialog[\"messages\"][-1][\"participant\"],\n",
+    "            dialog[\"messages\"][-1][\"text\"],\n",
+    "        )\n",
+    "        if part == \"assistant\":\n",
     "            end_messages[text] += 1"
    ]
   },
@@ -246,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('end_turns.json', 'w', encoding='utf-8') as file:\n",
+    "with open(\"end_turns.json\", \"w\", encoding=\"utf-8\") as file:\n",
     "    json.dump(closing_phrases, file, ensure_ascii=False, indent=4)"
    ]
   }
