--- a/experiments/exp2025_04_03_selecting_emb_params/src/exp2025_04_03_selecting_emb_params/Selecting base params for start loop finding.ipynb
+++ b/experiments/exp2025_04_03_selecting_emb_params/src/exp2025_04_03_selecting_emb_params/Selecting base params for start loop finding.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import warnings\n",
     "\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -50,19 +50,10 @@
     "ms = ModelStorage()\n",
     "ms.add(\n",
     "    \"my_emb\",\n",
-    "    config={\n",
-    "        \"model_name\": 'BAAI/bge-m3',\n",
-    "        \"device\": 'cuda'\n",
-    "    },\n",
+    "    config={\"model_name\": \"BAAI/bge-m3\", \"device\": \"cuda\"},\n",
     "    model_type=\"emb\",\n",
     ")\n",
-    "ms.add(\n",
-    "    \"my_llm\",\n",
-    "    config={\n",
-    "        \"name\": \"gpt-4o-mini\"\n",
-    "    },\n",
-    "    model_type=\"llm\"\n",
-    ")"
+    "ms.add(\"my_llm\", config={\"name\": \"gpt-4o-mini\"}, model_type=\"llm\")"
    ]
   },
   {
@@ -98,13 +89,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedder_model = ms.storage['my_emb'].model\n",
+    "embedder_model = ms.storage[\"my_emb\"].model\n",
     "EVAL = load_evaluator(\"pairwise_embedding_distance\", embeddings=embedder_model)\n",
+    "\n",
     "\n",
     "def get_distance(messages, start_turn):\n",
     "    for i, message in enumerate(messages):\n",
-    "        if message['participant'] == 'assistant':\n",
-    "            score = EVAL.evaluate_string_pairs(prediction=start_turn, prediction_b=message['text'])['score']\n",
+    "        if message[\"participant\"] == \"assistant\":\n",
+    "            score = EVAL.evaluate_string_pairs(\n",
+    "                prediction=start_turn, prediction_b=message[\"text\"]\n",
+    "            )[\"score\"]\n",
     "            if i == 0:\n",
     "                yield {\"start_distance\": score}\n",
     "            else:\n",
@@ -117,7 +111,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_distance_storage = {turn: {\"start_distance\": [], \"non-start_distance\": []} for turn in START_TURNS}"
+    "start_distance_storage = {\n",
+    "    turn: {\"start_distance\": [], \"non-start_distance\": []} for turn in START_TURNS\n",
+    "}"
    ]
   },
   {
@@ -134,14 +130,18 @@
     }
    ],
    "source": [
-    "for graph in tqdm(list(dataset['train'])[:100]):\n",
-    "    for dialog in graph['dialogues'][:5]:\n",
+    "for graph in tqdm(list(dataset[\"train\"])[:100]):\n",
+    "    for dialog in graph[\"dialogues\"][:5]:\n",
     "        for turn in START_TURNS:\n",
-    "            for d in get_distance(dialog['messages'], turn):\n",
+    "            for d in get_distance(dialog[\"messages\"], turn):\n",
     "                if d.get(\"start_distance\"):\n",
-    "                    start_distance_storage[turn]['start_distance'].append(d['start_distance'])\n",
+    "                    start_distance_storage[turn][\"start_distance\"].append(\n",
+    "                        d[\"start_distance\"]\n",
+    "                    )\n",
     "                elif d.get(\"non-start_distance\"):\n",
-    "                    start_distance_storage[turn]['non-start_distance'].append(d['non-start_distance'])"
+    "                    start_distance_storage[turn][\"non-start_distance\"].append(\n",
+    "                        d[\"non-start_distance\"]\n",
+    "                    )"
    ]
   },
   {
@@ -162,10 +162,12 @@
    "source": [
     "data = []\n",
     "for d in start_distance_storage.values():\n",
-    "    mean_sd = np.array(d['start_distance']).mean()\n",
-    "    mean_non_sd = np.array(d['non-start_distance']).mean()\n",
+    "    mean_sd = np.array(d[\"start_distance\"]).mean()\n",
+    "    mean_non_sd = np.array(d[\"non-start_distance\"]).mean()\n",
     "    data.append((mean_sd, mean_non_sd))\n",
-    "df = pd.DataFrame(data=data, columns=['start_distance', 'non-start_distance'], index=START_TURNS)"
+    "df = pd.DataFrame(\n",
+    "    data=data, columns=[\"start_distance\", \"non-start_distance\"], index=START_TURNS\n",
+    ")"
    ]
   },
   {
@@ -277,7 +279,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "end_distance_storage = {turn: {\"end_distance\": [], \"non-end_distance\": []} for turn in END_TURNS}"
+    "end_distance_storage = {\n",
+    "    turn: {\"end_distance\": [], \"non-end_distance\": []} for turn in END_TURNS\n",
+    "}"
    ]
   },
   {
@@ -286,14 +290,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedder_model = ms.storage['my_emb'].model\n",
+    "embedder_model = ms.storage[\"my_emb\"].model\n",
     "EVAL = load_evaluator(\"pairwise_embedding_distance\", embeddings=embedder_model)\n",
+    "\n",
     "\n",
     "def get_distance_end(messages, end_turn):\n",
     "    last_turn_idx = len(messages) - 1\n",
     "    for i, message in enumerate(messages):\n",
-    "        if message['participant'] == 'assistant':\n",
-    "            score = EVAL.evaluate_string_pairs(prediction=end_turn, prediction_b=message['text'])['score']\n",
+    "        if message[\"participant\"] == \"assistant\":\n",
+    "            score = EVAL.evaluate_string_pairs(\n",
+    "                prediction=end_turn, prediction_b=message[\"text\"]\n",
+    "            )[\"score\"]\n",
     "            if i == last_turn_idx:\n",
     "                yield {\"end_distance\": score}\n",
     "            else:\n",
@@ -314,14 +321,16 @@
     }
    ],
    "source": [
-    "for graph in tqdm(list(dataset['train'])[:100]):\n",
-    "    for dialog in graph['dialogues'][:4]:\n",
+    "for graph in tqdm(list(dataset[\"train\"])[:100]):\n",
+    "    for dialog in graph[\"dialogues\"][:4]:\n",
     "        for turn in END_TURNS:\n",
-    "            for d in get_distance_end(dialog['messages'], turn):\n",
+    "            for d in get_distance_end(dialog[\"messages\"], turn):\n",
     "                if d.get(\"end_distance\"):\n",
-    "                    end_distance_storage[turn]['end_distance'].append(d['end_distance'])\n",
+    "                    end_distance_storage[turn][\"end_distance\"].append(d[\"end_distance\"])\n",
     "                elif d.get(\"non-end_distance\"):\n",
-    "                    end_distance_storage[turn]['non-end_distance'].append(d['non-end_distance'])"
+    "                    end_distance_storage[turn][\"non-end_distance\"].append(\n",
+    "                        d[\"non-end_distance\"]\n",
+    "                    )"
    ]
   },
   {
@@ -332,10 +341,12 @@
    "source": [
     "data = []\n",
     "for d in end_distance_storage.values():\n",
-    "    mean_sd = np.array(d['end_distance']).mean()\n",
-    "    mean_non_sd = np.array(d['non-end_distance']).mean()\n",
+    "    mean_sd = np.array(d[\"end_distance\"]).mean()\n",
+    "    mean_non_sd = np.array(d[\"non-end_distance\"]).mean()\n",
     "    data.append((mean_sd, mean_non_sd))\n",
-    "df_end = pd.DataFrame(data=data, columns=['end_distance', 'non-end_distance'], index=END_TURNS)"
+    "df_end = pd.DataFrame(\n",
+    "    data=data, columns=[\"end_distance\", \"non-end_distance\"], index=END_TURNS\n",
+    ")"
    ]
   },
   {
@@ -447,7 +458,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dialogue2graph.metrics.llm_validators import is_greeting_repeated_emb_llm, is_dialog_closed_too_early_emb_llm\n",
+    "from dialogue2graph.metrics.llm_validators import (\n",
+    "    is_greeting_repeated_emb_llm,\n",
+    "    is_dialog_closed_too_early_emb_llm,\n",
+    ")\n",
     "from dialogue2graph import Dialogue"
    ]
   },
@@ -458,9 +472,18 @@
    "outputs": [],
    "source": [
     "dialogue_template = Dialogue()\n",
-    "good_graph = [dialogue_template.from_list(dialog['messages']) for dialog in dataset['train'][10]['dialogues']]\n",
-    "hello_x2_graph = [dialogue_template.from_list(dialog['messages']) for dialog in dataset['train'][350]['dialogues']]\n",
-    "bye_x2_graph = [dialogue_template.from_list(dialog['messages']) for dialog in dataset['train'][161]['dialogues']]"
+    "good_graph = [\n",
+    "    dialogue_template.from_list(dialog[\"messages\"])\n",
+    "    for dialog in dataset[\"train\"][10][\"dialogues\"]\n",
+    "]\n",
+    "hello_x2_graph = [\n",
+    "    dialogue_template.from_list(dialog[\"messages\"])\n",
+    "    for dialog in dataset[\"train\"][350][\"dialogues\"]\n",
+    "]\n",
+    "bye_x2_graph = [\n",
+    "    dialogue_template.from_list(dialog[\"messages\"])\n",
+    "    for dialog in dataset[\"train\"][161][\"dialogues\"]\n",
+    "]"
    ]
   },
   {
@@ -480,7 +503,7 @@
     }
    ],
    "source": [
-    "is_greeting_repeated_emb_llm(good_graph, ms, \"my_emb\", \"my_llm\") # False"
+    "is_greeting_repeated_emb_llm(good_graph, ms, \"my_emb\", \"my_llm\")  # False"
    ]
   },
   {
@@ -507,7 +530,7 @@
     }
    ],
    "source": [
-    "is_greeting_repeated_emb_llm(hello_x2_graph, ms, \"my_emb\", \"my_llm\") # True"
+    "is_greeting_repeated_emb_llm(hello_x2_graph, ms, \"my_emb\", \"my_llm\")  # True"
    ]
   },
   {
@@ -527,7 +550,7 @@
     }
    ],
    "source": [
-    "is_dialog_closed_too_early_emb_llm(good_graph, ms, \"my_emb\", \"my_llm\") # False"
+    "is_dialog_closed_too_early_emb_llm(good_graph, ms, \"my_emb\", \"my_llm\")  # False"
    ]
   },
   {
@@ -561,7 +584,7 @@
     }
    ],
    "source": [
-    "is_dialog_closed_too_early_emb_llm(bye_x2_graph, ms, \"my_emb\", \"my_llm\") # True"
+    "is_dialog_closed_too_early_emb_llm(bye_x2_graph, ms, \"my_emb\", \"my_llm\")  # True"
    ]
   }
  ],
