--- a/experiments/exp2025_03_12_topic_generation/exp2025_03_12_topic_generation/topic_generation.ipynb
+++ b/experiments/exp2025_03_12_topic_generation/exp2025_03_12_topic_generation/topic_generation.ipynb
@@ -638,35 +638,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "generation_model = ChatOpenAI(\n",
-    "    model=\"o1-mini\",\n",
-    "    api_key=env_settings.OPENAI_API_KEY,\n",
-    "    base_url=env_settings.OPENAI_BASE_URL,\n",
-    "    temperature=1,\n",
-    ")\n",
-    "theme_validation_model = ChatOpenAI(\n",
-    "    model=\"gpt-3.5-turbo\",\n",
-    "    api_key=env_settings.OPENAI_API_KEY,\n",
-    "    base_url=env_settings.OPENAI_BASE_URL,\n",
-    "    temperature=0,\n",
-    ")\n",
-    "validation_model = ChatOpenAI(\n",
-    "    model=\"gpt-3.5-turbo\",\n",
-    "    api_key=env_settings.OPENAI_API_KEY,\n",
-    "    base_url=env_settings.OPENAI_BASE_URL,\n",
-    "    temperature=0,\n",
-    ")\n",
-    "topic_generator = LoopedGraphGenerator(\n",
-    "    generation_model, validation_model, theme_validation_model\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -833,7 +804,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "match_triplets_dg(Graph(graph_c), dias)"
+    "match_dg_triplets(Graph(graph_c), dias)"
    ]
   },
   {
@@ -851,7 +822,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "match_triplets_dg(Graph(graph_c), dias)"
+    "match_dg_triplets(Graph(graph_c), dias)"
    ]
   },
   {
