--- a/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/test_pipeline.ipynb
+++ b/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/test_pipeline.ipynb
@@ -7,9 +7,7 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "import os\n",
-    "\n",
-    "os.environ[\"PATH_TO_ENV\"] = \"~/projects/chatsky-llm-autoconfig/.env\""
+    "import dotenv"
    ]
   },
   {
@@ -24,29 +22,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/peshkichev/miniconda3/envs/py311/lib/python3.11/site-packages/pydantic/_internal/_fields.py:192: UserWarning: Field name \"validate\" in \"Dialogue\" shadows an attribute in parent \"BaseModel\"\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from dialogue2graph.pipelines.models import ModelsAPI\n",
-    "\n",
-    "models = ModelsAPI()"
+    "from dialogue2graph import metrics\n",
+    "from dialogue2graph.pipelines.core.graph import Graph\n",
+    "from dialogue2graph.pipelines.model_storage import ModelStorage\n",
+    "from dialogue2graph.pipelines.helpers.parse_data import PipelineRawDataType"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### D2G Algo pipeline"
+    "dotenv.load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ms = ModelStorage()"
    ]
   },
   {
@@ -55,12 +67,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dialogue2graph.pipelines.d2g_algo.pipeline import Pipeline\n",
+    "ms.add(\n",
+    "    key=\"grouping_llm\",\n",
+    "    config={\"model_name\": \"chatgpt-4o-latest\", \"temperature\": 0},\n",
+    "    model_type=\"llm\",\n",
+    ")\n",
+    "ms.add(\n",
+    "    key=\"extending_llm\",\n",
+    "    config={\"model_name\": \"chatgpt-4o-latest\", \"temperature\": 0},\n",
+    "    model_type=\"llm\",\n",
+    ")\n",
+    "ms.add(\n",
+    "    key=\"filling_llm\",\n",
+    "    config={\"model_name\": \"o3-mini\", \"temperature\": 1},\n",
+    "    model_type=\"llm\",\n",
+    ")\n",
+    "ms.add(\n",
+    "    key=\"formatting_llm\",\n",
+    "    config={\"model_name\": \"gpt-4o-mini\", \"temperature\": 0},\n",
+    "    model_type=\"llm\",\n",
+    ")\n",
+    "ms.add(\n",
+    "    key=\"sim_model\",\n",
+    "    config={\"model_name\": \"BAAI/bge-m3\", \"device\": \"cuda:0\"},\n",
+    "    model_type=\"emb\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dialogue2graph.datasets.complex_dialogues import generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampler = generation.RecursiveDialogueSampler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"transfer_2.json\") as f:\n",
+    "    data = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampler.invoke(Graph(data[\"true_graph\"]), ms.storage[\"grouping_llm\"].model, 15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### D2G Light pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dialogue2graph.pipelines.d2g_light.pipeline import D2GLightPipeline\n",
     "\n",
-    "filling_llm = models(\"llm\", name=\"o3-mini\", temp=1)\n",
-    "formatting_llm = models(\"llm\", name=\"gpt-4o-mini\", temp=0)\n",
-    "sim_model = models(\"similarity\", name=\"BAAI/bge-m3\", device=\"cuda:0\")\n",
-    "pipeline = Pipeline(filling_llm, formatting_llm, sim_model)"
+    "pipeline = D2GLightPipeline(\n",
+    "    name=\"d2g_light\",\n",
+    "    model_storage=ms,\n",
+    "    filling_llm=\"filling_llm\",\n",
+    "    formatting_llm=\"formatting_llm\",\n",
+    "    sim_model=\"sim_model\",\n",
+    "    step2_evals=metrics.DGEvalBase,\n",
+    "    end_evals=metrics.DGEvalBase,\n",
+    ")"
    ]
   },
   {
@@ -86,8 +180,18 @@
     "    {\"text\": \"Alright, thanks anyway.\", \"participant\": \"user\"},\n",
     "    {\"text\": \"You're welcome! Have a fantastic trip!\", \"participant\": \"assistant\"},\n",
     "]\n",
-    "graph = pipeline.invoke(data)\n",
+    "raw_data = PipelineRawDataType(dialogs=data)\n",
+    "graph, report = pipeline.invoke(raw_data)\n",
     "graph.visualise_short(\"transfer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph.graph_dict"
    ]
   },
   {
@@ -138,8 +242,18 @@
     "        {\"text\": \"You're welcome! Have a fantastic trip!\", \"participant\": \"assistant\"},\n",
     "    ],\n",
     "]\n",
-    "graph = pipeline.invoke(data)\n",
+    "raw_data = PipelineRawDataType(dialogs=data)\n",
+    "graph, report = pipeline.invoke(raw_data)\n",
     "graph.visualise_short(\"transfer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph.graph_dict"
    ]
   },
   {
@@ -178,7 +292,8 @@
     "        ]\n",
     "    }\n",
     "]\n",
-    "graph = pipeline.invoke(data)\n",
+    "raw_data = PipelineRawDataType(dialogs=data)\n",
+    "graph, report = pipeline.invoke(raw_data)\n",
     "graph.visualise_short(\"transfer\")"
    ]
   },
@@ -188,9 +303,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"transfer.json\") as f:\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph.graph_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gr = Graph(data[\"true_graph\"])\n",
+    "gr.graph_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PipelineReport(service='d2g_light', properties={'time': 2.1800806522369385, 'simple_graph_comparison': True}, subreports=[{}])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph.graph_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"transfer_2.json\") as f:\n",
     "    data = json.load(f)\n",
-    "graph = pipeline.invoke(data)\n",
+    "\n",
+    "raw_data = PipelineRawDataType(dialogs=data[\"dialogs\"])\n",
+    "graph, report = pipeline.invoke(raw_data)\n",
     "graph.visualise_short(\"transfer\")"
    ]
   },
@@ -200,8 +374,108 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph = pipeline.invoke(\"transfer.json\")\n",
+    "with open(\"transfer_2.json\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "raw_data = PipelineRawDataType(dialogs=data[\"dialogs\"], true_graph=data[\"true_graph\"])\n",
+    "graph, report = pipeline.invoke(raw_data)\n",
     "graph.visualise_short(\"transfer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PipelineReport(service='d2g_light', properties={'time': 35.30027651786804, 'simple_graph_comparison': False}, subreports=[{}])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data = PipelineRawDataType(dialogs=\"transfer_2.json\", true_graph=\"transfer_2.json\")\n",
+    "graph, report = pipeline.invoke(raw_data)\n",
+    "graph.visualise_short(\"transfer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PipelineReport(service='d2g_light', properties={'time': 37.24576377868652, 'simple_graph_comparison': True}, subreports=[{}])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph, report = pipeline.invoke(raw_data)\n",
+    "graph.visualise_short(\"transfer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"test_graph_1.json\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)\n",
+    "Graph(data[\"true_graph\"]).visualise_short(\n",
+    "    \"Fixing a calendar sync delay with time zones\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data = PipelineRawDataType(dialogs=\"test_graph_1.json\")\n",
+    "graph, report = pipeline.invoke(raw_data)\n",
+    "graph.visualise_short(\"Fixing a calendar sync delay with time zones\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data = PipelineRawDataType(dialogs=data[\"dialogs\"], true_graph=data[\"true_graph\"])\n",
+    "graph, report = pipeline.invoke(raw_data, enable_evals=True)\n",
+    "report"
    ]
   },
   {
@@ -213,17 +487,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dialogue2graph.pipelines.d2g_llm.pipeline import Pipeline\n",
+    "from dialogue2graph.pipelines.d2g_llm.pipeline import D2GLLMPipeline\n",
     "\n",
-    "grouping_llm = models(\"llm\", name=\"chatgpt-4o-latest\", temp=0)\n",
-    "filling_llm = models(\"llm\", name=\"o3-mini\", temp=1)\n",
-    "formatting_llm = models(\"llm\", name=\"gpt-4o-mini\", temp=0)\n",
-    "sim_model = models(\"similarity\", name=\"BAAI/bge-m3\", device=\"cuda:0\")\n",
-    "pipeline = Pipeline(grouping_llm, filling_llm, formatting_llm, sim_model)"
+    "pipeline = D2GLLMPipeline(\n",
+    "    name=\"d2g_llm\",\n",
+    "    model_storage=ms,\n",
+    "    grouping_llm=\"grouping_llm\",\n",
+    "    filling_llm=\"filling_llm\",\n",
+    "    formatting_llm=\"formatting_llm\",\n",
+    "    sim_model=\"sim_model\",\n",
+    "    step2_evals=metrics.DGEvalBase,\n",
+    "    end_evals=metrics.DGEvalBase,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data = PipelineRawDataType(dialogs=\"transfer.json\")\n",
+    "graph, report = pipeline.invoke(raw_data)\n",
+    "graph.visualise_short(\"transfer\")"
    ]
   },
   {
@@ -249,7 +539,8 @@
     "    {\"text\": \"Alright, thanks anyway.\", \"participant\": \"user\"},\n",
     "    {\"text\": \"You're welcome! Have a fantastic trip!\", \"participant\": \"assistant\"},\n",
     "]\n",
-    "graph = pipeline.invoke(data)\n",
+    "raw_data = PipelineRawDataType(dialogs=data)\n",
+    "graph, report = pipeline.invoke(raw_data)\n",
     "graph.visualise_short(\"transfer\")"
    ]
   },
@@ -301,7 +592,8 @@
     "        {\"text\": \"You're welcome! Have a fantastic trip!\", \"participant\": \"assistant\"},\n",
     "    ],\n",
     "]\n",
-    "graph = pipeline.invoke(data)\n",
+    "raw_data = PipelineRawDataType(dialogs=data)\n",
+    "graph, report = pipeline.invoke(raw_data)\n",
     "graph.visualise_short(\"transfer\")"
    ]
   },
@@ -341,7 +633,8 @@
     "        ]\n",
     "    }\n",
     "]\n",
-    "graph = pipeline.invoke(data)\n",
+    "raw_data = PipelineRawDataType(dialogs=data)\n",
+    "graph, report = pipeline.invoke(raw_data)\n",
     "graph.visualise_short(\"transfer\")"
    ]
   },
@@ -353,7 +646,8 @@
    "source": [
     "with open(\"transfer.json\") as f:\n",
     "    data = json.load(f)\n",
-    "graph = pipeline.invoke(data)\n",
+    "raw_data = PipelineRawDataType(dialogs=data)\n",
+    "graph, report = pipeline.invoke(raw_data)\n",
     "graph.visualise_short(\"transfer\")"
    ]
   },
@@ -363,8 +657,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph = pipeline.invoke(\"transfer.json\")\n",
-    "graph.visualise_short(\"transfer\")"
+    "with open(\"test_graph_1.json\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)\n",
+    "raw_data = PipelineRawDataType(dialogs=data[\"dialogs\"], true_graph=data[\"true_graph\"])\n",
+    "graph, report = pipeline.invoke(raw_data, enable_evals=True)\n",
+    "report"
    ]
   },
   {
@@ -376,17 +673,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dialogue2graph.pipelines.d2g_extender.pipeline import Pipeline\n",
+    "from dialogue2graph.pipelines.d2g_extender.pipeline import D2GExtenderPipeline\n",
     "\n",
-    "extending_llm = models(\"llm\", name=\"chatgpt-4o-latest\", temp=0)\n",
-    "filling_llm = models(\"llm\", name=\"o3-mini\", temp=1)\n",
-    "formatting_llm = models(\"llm\", name=\"gpt-4o-mini\", temp=0)\n",
-    "sim_model = models(\"similarity\", name=\"BAAI/bge-m3\", device=\"cuda:0\")\n",
-    "pipeline = Pipeline(extending_llm, filling_llm, formatting_llm, sim_model)"
+    "pipeline = D2GExtenderPipeline(\n",
+    "    name=\"d2g_ext\",\n",
+    "    model_storage=ms,\n",
+    "    extending_llm=\"filling_llm\",\n",
+    "    filling_llm=\"filling_llm\",\n",
+    "    formatting_llm=\"formatting_llm\",\n",
+    "    sim_model=\"sim_model\",\n",
+    "    step1_evals=metrics.PreDGEvalBase,\n",
+    "    extender_evals=metrics.PreDGEvalBase,\n",
+    "    step2_evals=metrics.DGEvalBase,\n",
+    "    end_evals=metrics.DGEvalBase,\n",
+    ")"
    ]
   },
   {
@@ -412,7 +716,8 @@
     "    {\"text\": \"Alright, thanks anyway.\", \"participant\": \"user\"},\n",
     "    {\"text\": \"You're welcome! Have a fantastic trip!\", \"participant\": \"assistant\"},\n",
     "]\n",
-    "graph = pipeline.invoke(data)\n",
+    "raw_data = PipelineRawDataType(dialogs=data)\n",
+    "graph, report = pipeline.invoke(raw_data)\n",
     "graph.visualise_short(\"transfer\")"
    ]
   },
@@ -442,29 +747,10 @@
     "        },\n",
     "        {\"text\": \"Okay, have a great day!\", \"participant\": \"user\"},\n",
     "        {\"text\": \"Glad to help! Safe travels.\", \"participant\": \"assistant\"},\n",
-    "    ],\n",
-    "    [\n",
-    "        {\"text\": \"Hey there! How can I help you today?\", \"participant\": \"assistant\"},\n",
-    "        {\"text\": \"I need to book a ride to the airport.\", \"participant\": \"user\"},\n",
-    "        {\n",
-    "            \"text\": \"Sure! I can help with that. When is your flight, and where are you departing from?\",\n",
-    "            \"participant\": \"assistant\",\n",
-    "        },\n",
-    "        {\"text\": \"Do you have any other options?\", \"participant\": \"user\"},\n",
-    "        {\n",
-    "            \"text\": \"If you'd prefer, I can send you options for ride-share services instead. Would you like that?\",\n",
-    "            \"participant\": \"assistant\",\n",
-    "        },\n",
-    "        {\"text\": \"No, I'll manage on my own.\", \"participant\": \"user\"},\n",
-    "        {\n",
-    "            \"text\": \"No worries! Feel free to reach out anytime.\",\n",
-    "            \"participant\": \"assistant\",\n",
-    "        },\n",
-    "        {\"text\": \"Alright, thanks anyway.\", \"participant\": \"user\"},\n",
-    "        {\"text\": \"You're welcome! Have a fantastic trip!\", \"participant\": \"assistant\"},\n",
-    "    ],\n",
+    "    ]\n",
     "]\n",
-    "graph = pipeline.invoke(data)\n",
+    "raw_data = PipelineRawDataType(dialogs=data, supported_graph=graph.graph_dict)\n",
+    "graph, report = pipeline.invoke(raw_data)\n",
     "graph.visualise_short(\"transfer\")"
    ]
   },
@@ -504,7 +790,8 @@
     "        ]\n",
     "    }\n",
     "]\n",
-    "graph = pipeline.invoke(data)\n",
+    "raw_data = PipelineRawDataType(dialogs=data)\n",
+    "graph, report = pipeline.invoke(raw_data)\n",
     "graph.visualise_short(\"transfer\")"
    ]
   },
@@ -514,10 +801,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"transfer.json\") as f:\n",
+    "Graph(data[\"true_graph\"]).graph_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"test_graph_1.json\", encoding=\"utf-8\") as f:\n",
     "    data = json.load(f)\n",
-    "graph = pipeline.invoke(data)\n",
-    "graph.visualise_short(\"transfer\")"
+    "Graph(data[\"true_graph\"]).visualise_short(\n",
+    "    \"Fixing a calendar sync delay with time zones\"\n",
+    ")"
    ]
   },
   {
@@ -526,14 +823,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph = pipeline.invoke(\"transfer.json\")\n",
-    "graph.visualise_short(\"transfer\")"
+    "raw_data = PipelineRawDataType(dialogs=data[\"dialogs\"], true_graph=data[\"true_graph\"])\n",
+    "graph, report = pipeline.invoke(raw_data, enable_evals=True)\n",
+    "report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph.graph_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph.visualise_short(\"Fixing a calendar sync delay with time zones\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"test_metrics_data.json\", encoding=\"utf-8\") as f:\n",
+    "    data_2 = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_2[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data = PipelineRawDataType(\n",
+    "    dialogs=data_2[2][\"dialogues\"], true_graph=data[\"true_graph\"]\n",
+    ")\n",
+    "graph, report = pipeline.invoke(raw_data, enable_evals=True)\n",
+    "report"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
