Refactor imports to use langchain_community.chat_models instead of langchain_openai across multiple files; update test reports with new timing metrics.

--- a/experiments/old_experiments/exp20250207_three_stages_plus/graph_generation.ipynb
+++ b/experiments/old_experiments/exp20250207_three_stages_plus/graph_generation.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import logging\n",
     "from langchain.prompts import PromptTemplate\n",
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_community.chat_models import ChatOpenAI\n",
     "from langchain.output_parsers import PydanticOutputParser\n",
     "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
     "from chatsky_llm_autoconfig.algorithms.base import GraphGenerator\n",
