--- a/examples/data_generation/LoopedGraphGenerator_example.ipynb
+++ b/examples/data_generation/LoopedGraphGenerator_example.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_community.chat_models import ChatOpenAI\n",
     "from dialogue2graph.datasets.complex_dialogues.generation import LoopedGraphGenerator\n",
     "from dialogue2graph import Graph\n",
     "\n",
