--- a/examples/data_generation/cache_example.ipynb
+++ b/examples/data_generation/cache_example.ipynb
@@ -58,7 +58,7 @@
    ],
    "source": [
     "from dotenv import load_dotenv\n",
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_community.chat_models import ChatOpenAI\n",
     "from dialogue2graph.datasets.complex_dialogues.generation import LoopedGraphGenerator\n",
     "\n",
     "load_dotenv()"
