--- a/experiments/exp2025_03_19_testing_dia_augmentation/exp2025_03_19_testing_dia_augmentation/dialogue_augmentation.ipynb
+++ b/experiments/exp2025_03_19_testing_dia_augmentation/exp2025_03_19_testing_dia_augmentation/dialogue_augmentation.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "from dialogue2graph.pipelines.core.dialogue import DialogueMessage\n",
     "from pydantic import BaseModel\n",
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_community.chat_models import ChatOpenAI\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain_core.output_parsers import JsonOutputParser\n",
     "from typing import List\n",
