--- a/experiments/old_experiments/2024.10.06_synthetic_data_based_on_existing_graphs/gen_data.ipynb
+++ b/experiments/old_experiments/2024.10.06_synthetic_data_based_on_existing_graphs/gen_data.ipynb
@@ -30,7 +30,7 @@
     }
    ],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_community.chat_models import ChatOpenAI\n",
     "from langchain_core.messages import HumanMessage\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_core.pydantic_v1 import BaseModel, Field\n",
