--- a/experiments/old_experiments/2024.11.14_dialogue2graph/check_data.ipynb
+++ b/experiments/old_experiments/2024.11.14_dialogue2graph/check_data.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai import ChatOpenAI"
+    "from langchain_community.chat_models import ChatOpenAI"
    ]
   },
   {
