--- a/experiments/old_experiments/2024.11.17_concatenating_subchains_prompt/main.ipynb
+++ b/experiments/old_experiments/2024.11.17_concatenating_subchains_prompt/main.ipynb
@@ -25,7 +25,7 @@
     "from chatsky_llm_autoconfig.graph import Graph, BaseGraph\n",
     "\n",
     "from langchain.prompts import PromptTemplate\n",
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_community.chat_models import ChatOpenAI\n",
     "\n",
     "load_dotenv()"
    ]
