--- a/experiments/old_experiments/2024.11.27_triplet_check_impovement/triplet_check_impovement.ipynb
+++ b/experiments/old_experiments/2024.11.27_triplet_check_impovement/triplet_check_impovement.ipynb
@@ -17,7 +17,7 @@
     }
    ],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_community.chat_models import ChatOpenAI\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
     "\n",
