--- a/experiments/old_experiments/2025.01.13_data_check_and_sampler_debugging/check_the_data.ipynb
+++ b/experiments/old_experiments/2025.01.13_data_check_and_sampler_debugging/check_the_data.ipynb
@@ -21,7 +21,7 @@
     "import pandas as pd\n",
     "import dotenv\n",
     "from tqdm import tqdm\n",
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_community.chat_models import ChatOpenAI\n",
     "from chatsky_llm_autoconfig.graph import Graph\n",
     "from chatsky_llm_autoconfig.dialogue import Dialogue\n",
     "import chatsky_llm_autoconfig.metrics.automatic_metrics as auto_metrics\n",
