--- a/experiments/old_experiments/2025.01.28_find_ends/find_ends.ipynb
+++ b/experiments/old_experiments/2025.01.28_find_ends/find_ends.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai import ChatOpenAI"
+    "from langchain_community.chat_models import ChatOpenAI"
    ]
   },
   {
