--- a/examples/data_generation/LoopedGraphGenerator_example.ipynb
+++ b/examples/data_generation/LoopedGraphGenerator_example.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -41,17 +41,16 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import os\n",
     "from dotenv import load_dotenv\n",
-    "from langchain_openai import ChatOpenAI\n",
     "from dialogue2graph.datasets.complex_dialogues.generation import LoopedGraphGenerator\n",
     "from dialogue2graph import Graph\n",
+    "from dialogue2graph.pipelines.model_storage import ModelStorage\n",
     "\n",
     "load_dotenv()"
    ]
@@ -60,25 +59,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Choose LLMs for dialogue generation and dialogue validation"
+    "1. Create `ModelStorage` instance and add choosen LLMs for dialogue generation, dialogue validation, theme validation and cycle end search."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:dialogue2graph.pipelines.model_storage:Added llm model 'gen_model' to storage\n",
+      "INFO:dialogue2graph.pipelines.model_storage:Added llm model 'help_model' to storage\n"
+     ]
+    }
+   ],
    "source": [
-    "gen_model = ChatOpenAI(\n",
-    "    model=\"o1-mini\",\n",
-    "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
-    "    base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
+    "model_storage = ModelStorage()\n",
+    "model_storage.add(\n",
+    "    \"gen_model\",  # model to use for generation\n",
+    "    config={\"name\": \"o1-mini\"},\n",
+    "    model_type=\"llm\",\n",
     ")\n",
-    "val_model = ChatOpenAI(\n",
-    "    model=\"gpt-3.5-turbo\",\n",
-    "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
-    "    base_url=os.getenv(\"OPENAI_BASE_URL\"),\n",
-    "    temperature=0,\n",
+    "model_storage.add(\n",
+    "    \"help_model\",  # model to use for other tasks\n",
+    "    config={\"name\": \"gpt-3.5-turbo\"},\n",
+    "    model_type=\"llm\",\n",
     ")"
    ]
   },
@@ -91,22 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:dialogue2graph.utils.prompt_caching:DATABASE_URL not found in environment, falling back to in-memory cache\n",
-      "INFO:dialogue2graph.utils.prompt_caching:Using in-memory cache\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gen = LoopedGraphGenerator(\n",
-    "    generation_model=gen_model,\n",
-    "    validation_model=val_model,\n",
+    "    model_storage=model_storage,\n",
+    "    generation_llm=\"gen_model\",\n",
+    "    validation_llm=\"help_model\",\n",
+    "    cycle_ends_llm=\"help_model\",\n",
+    "    theme_validation_llm=\"help_model\",\n",
     ")"
    ]
   },
