overwright warninings changed

--- a/examples/basics/base_classes_usage.ipynb
+++ b/examples/basics/base_classes_usage.ipynb
@@ -81,9 +81,9 @@
    ],
    "source": [
     "some_graph_dict = dataset[\"train\"][5][\"graph\"]\n",
-    "print('Graph keys:', some_graph_dict.keys())\n",
-    "print('Graph edges:', some_graph_dict['edges'][:3])\n",
-    "print('Graph nodes:', some_graph_dict['nodes'][:3])"
+    "print(\"Graph keys:\", some_graph_dict.keys())\n",
+    "print(\"Graph edges:\", some_graph_dict[\"edges\"][:3])\n",
+    "print(\"Graph nodes:\", some_graph_dict[\"nodes\"][:3])"
    ]
   },
   {
