Feat/model validation (#48)
* Initializing models outside of the ModelStorage

* ModelStorage.add() now demand type instead of string in model_type field

* update userguides

---------

Co-authored-by: Yuriy Peshkichev <peshkichev@gpu6.ipavlov.mipt.ru>
Co-authored-by: NotBioWaste905 <andruhabobr@gmail.com>

--- a/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/test_pipeline.ipynb
+++ b/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/test_pipeline.ipynb
@@ -12,7 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_huggingface import HuggingFaceEmbeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +53,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,27 +80,27 @@
     "ms.add(\n",
     "    key=\"grouping_llm\",\n",
     "    config={\"model_name\": \"chatgpt-4o-latest\", \"temperature\": 0},\n",
-    "    model_type=\"llm\",\n",
+    "    model_type=ChatOpenAI,\n",
     ")\n",
     "ms.add(\n",
     "    key=\"extending_llm\",\n",
     "    config={\"model_name\": \"chatgpt-4o-latest\", \"temperature\": 0},\n",
-    "    model_type=\"llm\",\n",
+    "    model_type=ChatOpenAI,\n",
     ")\n",
     "ms.add(\n",
     "    key=\"filling_llm\",\n",
     "    config={\"model_name\": \"o3-mini\", \"temperature\": 1},\n",
-    "    model_type=\"llm\",\n",
+    "    model_type=ChatOpenAI,\n",
     ")\n",
     "ms.add(\n",
     "    key=\"formatting_llm\",\n",
     "    config={\"model_name\": \"gpt-4o-mini\", \"temperature\": 0},\n",
-    "    model_type=\"llm\",\n",
+    "    model_type=ChatOpenAI,\n",
     ")\n",
     "ms.add(\n",
     "    key=\"sim_model\",\n",
-    "    config={\"model_name\": \"BAAI/bge-m3\", \"device\": \"cuda:0\"},\n",
-    "    model_type=\"emb\",\n",
+    "    config={\"model_name\": \"BAAI/bge-m3\", \"model_kwargs\": {\"device\": \"cuda:0\"}},\n",
+    "    model_type=HuggingFaceEmbeddings,\n",
     ")"
    ]
   },
@@ -101,6 +111,24 @@
    "outputs": [],
    "source": [
     "from dialogue2graph.datasets.complex_dialogues import generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ms.save(\"model_storage.yml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ms.load(\"model_storage.yml\")"
    ]
   },
   {
@@ -132,6 +160,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ms"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -140,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,20 +364,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PipelineReport(service='d2g_light', properties={'time': 2.1800806522369385, 'simple_graph_comparison': True}, subreports=[{}])"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "report"
    ]
@@ -374,6 +400,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open(\"transfer_2.json\") as f:\n",
     "    data = json.load(f)\n",
     "\n",
@@ -384,20 +419,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PipelineReport(service='d2g_light', properties={'time': 35.30027651786804, 'simple_graph_comparison': False}, subreports=[{}])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "report"
    ]
@@ -415,20 +439,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PipelineReport(service='d2g_light', properties={'time': 37.24576377868652, 'simple_graph_comparison': True}, subreports=[{}])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "report"
    ]
@@ -673,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,6 +886,19 @@
    "source": [
     "raw_data = PipelineRawDataType(\n",
     "    dialogs=data_2[2][\"dialogues\"], true_graph=data[\"true_graph\"]\n",
+    ")\n",
+    "graph, report = pipeline.invoke(raw_data, enable_evals=True)\n",
+    "report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data = PipelineRawDataType(\n",
+    "    dialogs=data_2[2][\"dialogues\"], true_graph=data_2[2][\"graph\"]\n",
     ")\n",
     "graph, report = pipeline.invoke(raw_data, enable_evals=True)\n",
     "report"
