workflow secrets try1

--- a/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/test_pipeline.ipynb
+++ b/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/test_pipeline.ipynb
@@ -499,9 +499,7 @@
     }
    ],
    "source": [
-    "compare_graphs(\n",
-    "    Graph(data_2[1][\"graph\"]), graph\n",
-    ")"
+    "compare_graphs(Graph(data_2[1][\"graph\"]), graph)"
    ]
   },
   {
@@ -524,7 +522,9 @@
     "raw_data = PipelineRawDataType(\n",
     "    dialogs=data_2[2][\"dialogues\"], true_graph=data_2[1][\"graph\"]\n",
     ")\n",
-    "graph, report = pipeline.invoke(ms, \"d2g_light_sim_model:v1\", raw_data, enable_evals=True)\n",
+    "graph, report = pipeline.invoke(\n",
+    "    ms, \"d2g_light_sim_model:v1\", raw_data, enable_evals=True\n",
+    ")\n",
     "report"
    ]
   },
@@ -543,9 +543,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = load_dataset(\"DeepPavlov/d2g_generated_augmented\", token=os.getenv(\"HUGGINGFACE_TOKEN\"))\n",
-    "data = dataset['train'][0]\n",
-    "data['dialogues'][0]"
+    "dataset = load_dataset(\n",
+    "    \"DeepPavlov/d2g_generated_augmented\", token=os.getenv(\"HUGGINGFACE_TOKEN\")\n",
+    ")\n",
+    "data = dataset[\"train\"][0]\n",
+    "data[\"dialogues\"][0]"
    ]
   },
   {
@@ -557,7 +559,9 @@
     "from pathlib import Path\n",
     "import os\n",
     "\n",
-    "list_of_files = Path('/data/home/peshkichev/projects/chatsky-llm-autoconfig/tests/metrics').glob('d2g_light*.json') # * means all if need specific format then *.csv\n",
+    "list_of_files = Path(\n",
+    "    \"/data/home/peshkichev/projects/chatsky-llm-autoconfig/tests/metrics\"\n",
+    ").glob(\"d2g_light*.json\")  # * means all if need specific format then *.csv\n",
     "latest_file = max(list_of_files, key=lambda x: x.stat().st_ctime)\n",
     "# latest_file = max(list_of_files, key=os.path.getctime)\n",
     "print(latest_file)"
@@ -572,7 +576,9 @@
     "raw_data = PipelineRawDataType(\n",
     "    dialogs=data[\"augmented_dialogues\"][0], true_graph=data[\"graph\"]\n",
     ")\n",
-    "graph, report = pipeline.invoke(ms, \"d2g_light_sim_model:v1\", raw_data, enable_evals=True)\n",
+    "graph, report = pipeline.invoke(\n",
+    "    ms, \"d2g_light_sim_model:v1\", raw_data, enable_evals=True\n",
+    ")\n",
     "report"
    ]
   },
@@ -582,9 +588,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compare_graphs(\n",
-    "    Graph(data[\"graph\"]), graph\n",
-    ")"
+    "compare_graphs(Graph(data[\"graph\"]), graph)"
    ]
   },
   {
@@ -593,7 +597,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['graph']"
+    "data[\"graph\"]"
    ]
   },
   {
@@ -603,8 +607,8 @@
    "outputs": [],
    "source": [
     "dataset = load_dataset(\"DeepPavlov/d2g_generated\", token=os.getenv(\"HUGGINGFACE_TOKEN\"))\n",
-    "data = dataset['train'][0]\n",
-    "data['dialogues'][0]"
+    "data = dataset[\"train\"][0]\n",
+    "data[\"dialogues\"][0]"
    ]
   },
   {
@@ -613,12 +617,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = dataset['train'][0]\n",
-    "dialogs = data['dialogues'][0]['messages']\n",
-    "graph = data['graph']\n",
-    "raw_data = PipelineRawDataType(\n",
-    "    dialogs=dialogs, true_graph=graph\n",
-    ")"
+    "data = dataset[\"train\"][0]\n",
+    "dialogs = data[\"dialogues\"][0][\"messages\"]\n",
+    "graph = data[\"graph\"]\n",
+    "raw_data = PipelineRawDataType(dialogs=dialogs, true_graph=graph)"
    ]
   },
   {
@@ -627,7 +629,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['graph']"
+    "data[\"graph\"]"
    ]
   },
   {
@@ -661,7 +663,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "report.properties['complex_graph_comparison']['matched_triplets'][0]"
+    "report.properties[\"complex_graph_comparison\"][\"matched_triplets\"][0]"
    ]
   },
   {
@@ -681,7 +683,7 @@
     }
    ],
    "source": [
-    "len(report.properties['complex_graph_comparison']['matched_triplets'])"
+    "len(report.properties[\"complex_graph_comparison\"][\"matched_triplets\"])"
    ]
   },
   {
@@ -1134,7 +1136,7 @@
     }
    ],
    "source": [
-    "len(dataset['train'])"
+    "len(dataset[\"train\"])"
    ]
   }
  ],
